--- a/contact.html
+++ b/contact.html
@@ -27,32 +27,32 @@
                     <h3 class="Article__h3">ScoutMaster</h3>
                     <h4 class="Article__h4">Mr. Panstingle</h4>
                     <ul class="Article__ul">
-                        <li class="Article__li"><i class="fa-solid fa-envelope"></i>Email: example@email.com</li>
-                        <li class="Article__li"><i class="fa-solid fa-phone"></i>Phone Number: 999-999-999</li>
+                        <li class="Article__li"><i class="fa-solid fa-envelope Icon"></i>Email: example@email.com</li>
+                        <li class="Article__li"><i class="fa-solid fa-phone Icon"></i>Phone Number: 999-999-999</li>
                     </ul>
                 </article>
                 <article class="Article">
                     <h3 class="Article__h3">Other Person</h3>
                     <h4 class="Article__h4">Mr. Nobody</h4>
                     <ul class="Article__ul">
-                        <li class="Article__li"><i class="fa-solid fa-envelope"></i>Email: example@email.com</li>
-                        <li class="Article__li"><i class="fa-solid fa-phone"></i>Phone Number: 999-999-999</li>
+                        <li class="Article__li"><i class="fa-solid fa-envelope Icon"></i>Email: example@email.com</li>
+                        <li class="Article__li"><i class="fa-solid fa-phone Icon"></i>Phone Number: 999-999-999</li>
                     </ul>
                 </article>
                 <article class="Article">
                     <h3 class="Article__h3">Other Person</h3>
                     <h4 class="Article__h4">Mr. Nobody</h4>
                     <ul class="Article__ul">
-                        <li class="Article__li"><i class="fa-solid fa-envelope"></i>Email: example@email.com</li>
-                        <li class="Article__li"><i class="fa-solid fa-phone"></i>Phone Number: 999-999-999</li>
+                        <li class="Article__li"><i class="fa-solid fa-envelope Icon"></i>Email: example@email.com</li>
+                        <li class="Article__li"><i class="fa-solid fa-phone Icon"></i>Phone Number: 999-999-999</li>
                     </ul>
                 </article>
                 <article class="Article">
                     <h3 class="Article__h3">Socials</h3>
                     <ul class="Article__ul">
-                        <li class="Article__li"><i class="fa-brands fa-facebook"></i>Facebook: <a href="">Here</a></li>
-                        <li class="Article__li"><i class="fa-brands fa-square-instagram"></i>Instagram: <a href="">Here</a></li>
-                        <li class="Article__li"><i class="fa-brands fa-flickr"></i>Flickr: <a href="">Here</a></li>
+                        <li class="Article__li"><i class="fa-brands fa-facebook Icon"></i>Facebook: <a href="">Here</a></li>
+                        <li class="Article__li"><i class="fa-brands fa-square-instagram Icon"></i>Instagram: <a href="">Here</a></li>
+                        <li class="Article__li"><i class="fa-brands fa-flickr Icon"></i>Flickr: <a href="">Here</a></li>
                     </ul>
                 </article>
             </section>
