--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,20 @@
                         <li class="Article__li"><i class="fa-brands fa-flickr Icon"></i>Flickr: <a href="">Here</a></li>
                     </ul>
                 </article>
+                <section class="Form">
+                    <h2 class="Content__h2">Contact Form</h2>
+                    <article class="Article">
+                        <form>
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" placeholder="Your name" required>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" placeholder="Your email" required>
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" rows="5" placeholder="Your message" required></textarea>
+                          <button type="submit" id="submit">Send Message</button>
+                        </form>
+                    </article>
+                </section>
             </section>
         </main>
         <footer class="Footer">
