--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="Favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
         <script src="https://kit.fontawesome.com/4cde890662.js" crossorigin="anonymous"></script>
+        <link rel="preload" as="image" href="Images/Hero.jpg">
     </head>
     <body>
         <header class="Header">
