added meta data

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
         <script src="https://kit.fontawesome.com/4cde890662.js" crossorigin="anonymous"></script>
         <link rel="preload" as="image" href="Images/Hero.jpg">
+        <meta property="og:title" content="BSA Troop 375">
+        <meta property="og:description" content="Troop 375 online site">
+        <meta property="og:image" content="https://hopkins34.github.io/Troop-375/Images/Troop-375.png">
+        <meta property="og:url" content="https://hopkins34.github.io/Troop-375/">
     </head>
     <body>
         <header class="Header">
