--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="Favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
         <script src="https://kit.fontawesome.com/4cde890662.js" crossorigin="anonymous"></script>
-        <link rel="preload" as="image" href="Images/Hero.jpg">
+        <link rel="preload" as="image" href="Images/Hero.png">
         <meta property="og:title" content="BSA Troop 375">
         <meta property="og:description" content="Troop 375 online site">
         <meta property="og:image" content="https://hopkins34.github.io/Troop-375/Images/Troop-375.png">
@@ -23,6 +23,7 @@
                 <ul class="Nav__ul">
                     <li class="Nav__li"><a href="join.html"><i class="fa-solid fa-plus Icon"></i>Join us</a></li>
                     <li class="Nav__li"><a href="docs.html"><i class="fa-solid fa-file Icon"></i>Documents</a></li>
+                    <li class="Nav__li"><a href="activitys.html"><i class="fa-solid fa-tent Icon"></i>Activitys</a></li>
                     <li class="Nav__li"><a href="contact.html"><i class="fa-solid fa-address-book Icon"></i>Contact us</a></li>
                 </ul>
             </nav>
