--- a/activitys.html
+++ b/activitys.html
@@ -15,7 +15,7 @@
                 <ul class="Nav__ul">
                     <li class="Nav__li"><a href="join.html"><i class="fa-solid fa-plus Icon"></i>Join us</a></li>
                     <li class="Nav__li"><a href="docs.html"><i class="fa-solid fa-file Icon"></i>Documents</a></li>
-                    <li class="Nav__li"><a href="activitys.html"><i class="fa-solid fa-tent Icon"></i>Activitys</a></li>
+                    <li class="Nav__li"><a href="activitys.html"><i class="fa-solid fa-tent Icon"></i>Activities</a></li>
                     <li class="Nav__li"><a href="contact.html"><i class="fa-solid fa-address-book Icon"></i>Contact us</a></li>
                 </ul>
             </nav>
@@ -23,7 +23,7 @@
         <main class="Main">
             <section class="Content">
                 <section class="HighAdventure">
-                    <h2 class="Content__h2">Activitys</h2>
+                    <h2 class="Content__h2">Activities</h2>
                     <h4 class="Content__h4">Troop 375 offers a variety of activities to promote leadership, teamwork, and personal growth. Scouts participate in meetings, outdoor adventures, service projects, and merit badge opportunities. From camping trips to community service, each event helps scouts develop new skills and create lasting memories. Stay updated on upcoming events and get involved with Troop 375!</h4>
                     <h2 class="Content__h2">High Adventure</h2>
                     <article class="Article">
