--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h2 class="Article__h2">Some Helpful links</h2>
                     <article class="Article">
                         <ul class="Article__ul">
-                            <li class="Article__li">Tecumseh Council #439: <a href="http://www.tecumsehcouncilbsa.org/">Here</a></li>
+                            <li class="Article__li">Tecumseh Council #439: <a href="https://tecumsehcouncil.org/">Here</a></li>
                             <li class="Article__li">BSA Official Website: <a href="http://www.scouting.org/">Here</a></li>
                             <li class="Article__li">Rank Requirements: <a href="http://www.scouting.org/scoutsource/BoyScouts/AdvancementandAwards.aspx">Here</a></li>
                             <li class="Article__li">Troop Store: <a href="https://t375-online-store.square.site/">Here</a></li>
