--- a/join.html
+++ b/join.html
@@ -35,11 +35,11 @@
                     </ul>
                 </article>
                 <article class="Article">
-                    <h3 class="Article__h3">Merrit badge councelor</h3>
+                    <h3 class="Article__h3">Merit badge counselor</h3>
                     <p class="Article__p">A merit badge counselor is a responsible adult with knowledge and enthusiasm about a career, hobby or other subject who is willing to share that knowledge and enthusiasm with Scouts.</p>
                     <ul class="Article__ul">
                         <li class="Article__li">Complete the BSA Adult applcation: <a href="">Here</a></li>
-                        <li class="Article__li">Complete the BSA Merit Badge Counselor form: <a href="">Here</a></li>
+                        <li class="Article__li">Complete the BSA Merit Badge counselor form: <a href="">Here</a></li>
                         <li class="Article__li">Contact Mr. Panstingle or attend a troop meeting</li>
                     </ul>
                 </article>
