--- a/contact.html
+++ b/contact.html
@@ -59,13 +59,13 @@
                 <section class="Form">
                     <h2 class="Content__h2">Contact Form</h2>
                     <article class="Article">
-                        <form>
+                        <form id="form" autocomplete="off">
                             <label for="name">Name</label>
-                            <input type="text" id="name" name="name" placeholder="Your name" required>
+                            <input type="text" id="name" name="name" placeholder="Your name">
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="email" placeholder="Your email" required>
+                            <input type="text" id="email" name="email" placeholder="Your email">
                             <label for="message">Message</label>
-                            <textarea id="message" name="message" rows="5" placeholder="Your message" required></textarea>
+                            <textarea id="message" name="message" rows="5" placeholder="Your message"></textarea>
                           <button type="submit" id="submit">Send Message</button>
                         </form>
                     </article>
