--- a/index.html
+++ b/index.html
@@ -40,16 +40,8 @@
                 <section class="Meetings">
                     <h2 class="Content__h2">Upcoming Meetings</h2>
                     <article class="Article">
-                        <h3 class="Article__h3">5:30-6:30PM Jan 12 Klondike planning meeting</h3>
-                        <p class="Article__p">The Klondike planning meeting will be a key session for preparing our scouts for the upcoming event. An experienced older scout will lead the discussion, explaining the essential gear to bring, from warm clothing to necessary tools for the challenges. Additionally, they’ll share strategies for success, offering tips on how to work efficiently as a team, stay organized, and approach the various games with confidence. This meeting will ensure that all scouts are well-prepared, both mentally and physically, to tackle the demanding tasks at Klondike and maximize their chances of winning.</p>
-                    </article>
-                    <article class="Article">
-                        <h3 class="Article__h3">6:30-8:00PM Jan 12 Troop Meeting</h3>
-                        <p class="Article__p">At the upcoming troop meeting, scouts will participate in a variety of activities to improve their skills and teamwork. We’ll focus on hands-on practice with different scouting techniques, such as map reading, knot-tying, and first-aid drills. There will also be time for discussions on upcoming events and planning, ensuring everyone stays informed and engaged. Scouts will work together in small groups to reinforce leadership skills and strengthen their connections within the troop.</p>
-                    </article>
-                    <article class="Article">
-                        <h3 class="Article__h3">6:30-8:00PM Jan 26 High Adventure Voting</h3>
-                        <p class="Article__p">At the upcoming troop meeting, we will hold a vote to decide on our next high adventure trip. Scouts will have the opportunity to discuss the different options, which may include activities like hiking, canoeing, or camping in more challenging and remote locations. After the discussion, each scout will cast their vote based on their interests and the trip they’re most excited about. This is an important decision that will shape our troop’s upcoming adventures, and we encourage everyone to participate and share their thoughts.</p>
+                        <h3 class="Article__h3">Troop Meeting</h3>
+                        <p class="Article__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptas, vero voluptatem hic et maxime magni atque sint aperiam cupiditate? Fuga quidem libero dolor omnis quos deleniti! Magnam, nostrum eum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est eius nesciunt ad veniam odio optio sapiente omnis tempore facilis necessitatibus modi blanditiis repellat praesentium, perspiciatis delectus magni magnam deleniti nobis?</p>
                     </article>
                 </section>
                 <section class="News">
