--- a/index.html
+++ b/index.html
@@ -24,17 +24,12 @@
                     <li class="Nav__li"><a href="join.html"><i class="fa-solid fa-plus Icon"></i>Join us</a></li>
                     <li class="Nav__li"><a href="docs.html"><i class="fa-solid fa-file Icon"></i>Documents</a></li>
                     <li class="Nav__li"><a href="activitys.html"><i class="fa-solid fa-tent Icon"></i>Activities</a></li>
-                    <li class="Nav__li"><a href="contact.html"><i class="fa-solid fa-address-book Icon"></i>Contact us</a></li>
+                    <li class="Nav__li"><a href="calender.html"><i class="fa-solid fa-calendar-days Icon"></i>Calender</a></li>
                 </ul>
             </nav>
         </header>
         <main class="Main">
             <section class="Hero">
-                <div class="Hero__text">
-                    <h2 class="Hero__h2">Welcome!</h2>
-                    <h3 class="Hero__h3 nowrap">Troop 375 Website</h3>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
             </section>
             <section class="Content">
                 <section class="Meetings">
@@ -65,11 +60,20 @@
                         </ul>
                     </article>
                 </section>
+                <section class="Contact">
+                <h2 class="Article__h2">Contact us</h2>
+                    <article class="Article">
+                        <ul class="Article__ul">
+                            <li class="Article__li">Scoutmaster, Adam Panstingel: (937)-609-7694</li>
+                            <li class="Article__li">Webmaster, Cooper Redfern: (937)-414-1065</li>
+                        </ul>
+                    </article>
+                </section>
             </section>
         </main>
         <footer class="Footer">
-            <p class="Footer__p">&COPY; Cooper Redfern 2025</p>
-            <button id="ToTop" onclick="scrollToTop()"><i class="fa-solid fa-arrow-up"></i></button>
+                <p class="Footer__p">&COPY; Cooper Redfern 2025</p>
+                <button id="ToTop" onclick="scrollToTop()"><i class="fa-solid fa-arrow-up"></i></button>
         </footer>
         <script src="main.js"></script>
     </body>
