--- a/docs.html
+++ b/docs.html
@@ -16,7 +16,7 @@
                     <li class="Nav__li"><a href="join.html"><i class="fa-solid fa-plus Icon"></i>Join us</a></li>
                     <li class="Nav__li"><a href="docs.html"><i class="fa-solid fa-file Icon"></i>Documents</a></li>
                     <li class="Nav__li"><a href="activitys.html"><i class="fa-solid fa-tent Icon"></i>Activities</a></li>
-                    <li class="Nav__li"><a href="contact.html"><i class="fa-solid fa-address-book Icon"></i>Contact us</a></li>
+                    <li class="Nav__li"><a href="calender.html"><i class="fa-solid fa-calendar-days Icon"></i>Calender</a></li>
                 </ul>
             </nav>
         </header>
